# mcp-grafana

./: CHANGELOG.md  Dockerfile  Dockerfile.alpine  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  go.mod  go.sum  instances.go  instances_test.go  mcpgrafana.go  mcpgrafana_test.go  tools.go  tools_test.go
.github/workflows/: auto-tag.yml  docker.yml  e2e.yml  integration.yml  release.yml  test-install-scripts.yml  token-baseline.yml  token-check.yml  unit.yml
cmd/mcp-grafana/: main.go
docs/sources/set-up/: client-configuration-examples.md
observability/: observability.go  observability_test.go
testdata/provisioning/datasources/: datasources.yaml
tests/: admin_test.py  clickhouse_test.py  cloudwatch_test.py  dashboards_test.py  disable_write_test.py  elasticsearch_test.py  loki_test.py  navigation_test.py  pyproject.toml  rendering_test.py  tempo_test.py  utils.py
tools/: alerting_client.go  alerting_client_test.go  alerting_manage_rules_types.go  alerting_manage_rules_unit_test.go  annotations_integration_test.go  annotations_unit_test.go  asserts.go  clickhouse.go  clickhouse_test.go  cloudwatch.go  cloudwatch_test.go  dashboard.go  dashboard_test.go  dashboard_unit_test.go  datasources.go  datasources_test.go  datasources_unit_test.go  elasticsearch.go  endpoints.go  endpoints_test.go  loki.go  prom_backend.go  prom_backend_cloudmonitoring.go  prometheus.go  prometheus_unit_test.go  pyroscope.go  rendering.go  rendering_test.go  run_panel_query.go  search_unit_test.go  sift.go
